[metadata]
name = lsutil
version = attr: lsutil.__version__
description = Unix ls in Python
#long_description = file: README.md, CHANGELOG.rst, LICENSE.rst
long_description = file: README.md
keywords = unix, ls
license = GNU GPLv3 
url = https://koobedoc.github.io/lsutil/

[options]
install_requires =
    rich

packages = find:
package_dir =
    = src

include_package_data = True

[options.package_data]
* = *.txt, static/*, templates/*, static/*/*, static/*/*/*, static/*/*/*/*

[options.entry_points]
console_scripts =
    lsutil = lsutil:lsutil.lsutil.main_cli

[options.packages.find]
where = src
include = l*
#exclude = additional
